--- a/src/sass/components/_controls.scss
+++ b/src/sass/components/_controls.scss
@@ -1,6 +1,6 @@
 .controls{
   float: left;
-  width:338px;
+  width:45%;
   margin:20px;
   box-shadow: 0px 0px 5px rgba($blue-grey-900,0.1);
   
