--- a/src/sass/components/_investment_card.scss
+++ b/src/sass/components/_investment_card.scss
@@ -1,4 +1,4 @@
-$InvestmentCardStatefulAreaHeight: 136px;
+
 .investment-card{
   position:relative;
   float: left;
@@ -96,7 +96,7 @@ $InvestmentCardStatefulAreaHeight: 136px;
   float: left;
   margin: 10px 0;
   padding:10px;
-  height: $InvestmentCardStatefulAreaHeight;
+  
   
   .mui-input {
     margin-bottom: 32px;
@@ -140,10 +140,11 @@ $InvestmentCardStatefulAreaHeight: 136px;
 }
 
 .investment-card-pending-state{
-
-  height:($InvestmentCardStatefulAreaHeight + 80);
+  width:100%;
   margin: 10px 0;
   text-align: center;
+  float: left;
+
   p{ margin-bottom: 0;}
   p.remind-me-label{
     margin-top: -16px;
@@ -156,10 +157,11 @@ $InvestmentCardStatefulAreaHeight: 136px;
   opacity: 0;
   transition: opacity, 1s;
   float: left;
-  height: $InvestmentCardStatefulAreaHeight;
+  
   margin: 10px 0;
   width:100%;
   text-align: center;
+
   h3{ margin-bottom:0;}
   h4{color:$accent-1-color;}
 }
@@ -169,21 +171,30 @@ $InvestmentCardStatefulAreaHeight: 136px;
   opacity: 0;
   transition: opacity, 1s;
   float: left;
-  height: $InvestmentCardStatefulAreaHeight;
+  
   margin: 10px 0;
   width:100%;
   text-align: center;
   p{ margin-bottom: 0;}
-  h3{ margin-bottom:0;
+  h3{ 
+    margin-bottom:0;
     color:$accent-3-color;
+    padding-top: 5px;
   }
-  h4{color:$accent-1-color; padding-top: 0}
+  h4{
+    padding-top: 0;
+    margin-bottom: 0;
+    margin-top: 4px;
+    color:$accent-1-color;
+  }
 }
 
 
 .invest-card-progress-bar-wrapper{
-  float:left;
-  width:100%;
+  float: left;
+  width: 280px;
+  position: absolute;
+  bottom: 1px;
 }
 .invest-card-progress-bar {
   position: relative;
